--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 <meat  charset="UTF-8">
 <TITLE>WYH</title>
-
+<style type="text/css">
+  body{
+  backgroimage:url(/timg.jpg);
+  }
+  </style>
 </head>
 
 <body>
