--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <TITLE>WYH</title>
 <style type="text/css">
   body{
-  backgroimage:url(/timg.jpg);
+  backgrounnd-image:url(./timg.jpg);
   }
   </style>
 </head>
 
 <body>
-  <img src="timg.jpg"/>
+  
 <h1>养心阁</h1>
 
 
