--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <TITLE>WYH</title>
 <style type="text/css">
   body{
-  backgrounnd-image:url(./timg.jpg);
+  backgrounnd-image:url(timg.jpg);
   }
   </style>
 </head>
