--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
   
 <h1> 灵犀读书会 </h1> 
-<h2> 关怀每一个爱阅在人<h2>
+  <h2> 一个心理空间互动的平台<h2>
+<h2> 关怀每一个爱阅人<h2>
+  <h3> 倍加关怀 家庭教育 <h3>
+    
+  
 
 
 
