--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
   
 <h1> 灵犀读书会 </h1> 
-  <h2> 一个心理空间互动的平台<h2>
-<h2> 关怀每一个爱阅人<h2>
-  <h3> 倍加关怀 家庭教育 <h3>
+<h2> 一个心理空间互动的平台</h2>
+<h3> 关怀每一个爱阅人</h3>
+<h4> 倍加关怀 家庭教育 </h4>
     
   
 
